--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-libmbcoreutils-dev (0.01) precise; urgency=low
+libmbcoreutils-dev (2.3.0) precise; urgency=low
 
-  * Initial Release.
+  * 2.3.0 release
 
- -- MakerBot Industries dev team <dev@makerbot.com>  Wed, 31 Aug 2012 10:39:00 -0400
+ -- MakerBot Industries dev team <dev@makerbot.com>  Tue, 27 Sep 2013 14:38:00  -0400
