--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmbcoreutils-dev (2.3.1) precise; urgency=low
+
+  * 2.3.1 release
+
+ -- MakerBot Industries dev team <dev@makerbot.com>  Thu, 03 Oct 2013 14:34:12 -0400
+
 libmbcoreutils-dev (2.3.0) precise; urgency=low
 
   * 2.3.0 release
