--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmbcoreutils-dev (3.0.0) precise; urgency=low
+
+  * 3.0.0 release
+
+ -- MakerBot Industries dev team <dev@makerbot.com>  Tue, 04 Mar 2014 18:23:28 -0500
+
 libmbcoreutils-dev (2.3.2) precise; urgency=low
 
   * 2.3.2 release
